# ThingsStats

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
code/: report.py  weeklyReport.py
code/01_dataConstruction/: getData.py
code/getDateData/: getDateData.py
code/src/: ThingsData.py  report.py  utilities.py
notebooks/01_descriptives/: 01_descriptives.py
notebooks/getDate/: getDate.py  getDateData.py
src/: ThingsAddDaily.py  ThingsData.py  ThingsReport.py  app.py  cliTool.py  frontEnd.py  main.py  report.py  thingscli.py  utilities.py
things/: ThingsAddDaily.py
thingscli/: __init__.py  setup.py
