[metadata]
# replace with your username:
name = thingscli
version = 0.0.1
author = Landon Gibson
author_email = landon.g42@gmail.com
description = A cli tool for things3 todo app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lmgibson/ThingsStats
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = thingscli
packages = find:
python_requires = >=3.6

[options.packages.find]
where = thingscli